syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "org.myddd.extensions.security.api";
option java_outer_classname = "UserApplicationProto";
package org.myddd.extensions.security.api;

service UserApplication {
    /**
     * 创建一个本地用户
     */
    rpc CreateLocalUser(UserDto) returns (UserDto);

    /**
     * 根据用户ID查询一个本地用户
     */
    rpc QueryLocalUserByUserId(google.protobuf.StringValue) returns (OptionalUserDto);

    /**
     * 根据用户ID查询一个用户
     */
    rpc QueryUserById(google.protobuf.Int64Value) returns (UserDto);

    /**
     * 分页查询用户
     */
    rpc PageQueryUser(PageQueryDto) returns (PageUserDto);

    /**
     * 启用一个用户
     */
    rpc EnableUser(UserDto) returns (google.protobuf.BoolValue);

    /**
     * 禁用一个用户
     */
    rpc DisableUser(UserDto) returns (google.protobuf.BoolValue);

}

message PageQueryDto{
    int32 page = 1;
    int32 page_size = 2;
}

message PageUserDto{
    repeated UserDto users = 1;
    int32 page = 2;
    int32 page_size = 3;
    int64 total = 4;
}

message UserDto {
    int64 id = 1;
    string user_id = 2;
    string password = 3;
    string encode_password = 4;
    string name = 5;
    int64 create_time = 6;
    string phone = 7;
    string email = 8;
    bool disabled = 9;
}

message OptionalUserDto {
    optional UserDto user = 1;
}